--- a/_posts/2023-07-31-카메라 파마메터.md
+++ b/_posts/2023-07-31-카메라 파마메터.md
@@ -16,34 +16,31 @@ tags: cv
 - 내부 기구적 요인을 제거하기 위한 **intrinsic parameter**를 구하는 과정이 카메라 캘리브레이션 
 
 ## 캘리브레이션 개요
-$$
-\begin{matrix}
-s
-\begin{bmatrix}
-x\\y\\1
-\end{bmatrix}
-&=& 
-\begin{bmatrix}
-f_x & skew\_cf_x & c_x\\
-0 & f_y & c_y\\
-0&0&1
-\end{bmatrix}
-\begin{bmatrix}
-r_{11}& r_{12} & r_{13} & r_{14} \\
-r_{21}& r_{22} & r_{23} & r_{24} \\
-r_{31}& r_{32} & r_{33} & r_{34} \\
-\end{bmatrix}
-\begin{bmatrix}
-X\\Y\\Z\\1
-\end{bmatrix}
-\\
-&=& A[R|t]
-\begin{bmatrix}
-X\\Y\\Z\\1
-\end{bmatrix}
-
-\end{matrix}
-$$
+$$\begin{matrix}
+    s
+    \begin{bmatrix}
+        x\\y\\1
+    \end{bmatrix}
+    &=&
+    \begin{bmatrix}
+        f_x & skew\_cf_x & c_x\\
+        0 & f_y & c_y\\
+        0&0&1
+    \end{bmatrix}
+    \begin{bmatrix}
+        r_{11}& r_{12} & r_{13} & r_{14} \\
+        r_{21}& r_{22} & r_{23} & r_{24} \\
+        r_{31}& r_{32} & r_{33} & r_{34} \\
+    \end{bmatrix}
+    \begin{bmatrix}
+        X\\Y\\Z\\1
+    \end{bmatrix}
+    \\
+    &=& A[R|t]
+    \begin{bmatrix}
+        X\\Y\\Z\\1
+    \end{bmatrix}
+\end{matrix}$$
 - $X,Y,Z$ - 월드 좌표계 (world coordinate system) 상 3D 점의 좌표
 - $[R|t]$ - **extrinsic parameter** 월드좌표계를 카메라 좌표계로 변환하기 위한 회전 이동변환 행렬. 
   - 즉 카메라의 위치와 방향등 **카메라와 외부공간과의 기하학적 관계**에 대한 파라메터
