--- a/_posts/2023-07-31-카메라 파마메터.md
+++ b/_posts/2023-07-31-카메라 파마메터.md
@@ -36,18 +36,18 @@ $$\begin{matrix}
         X\\Y\\Z\\1
     \end{bmatrix}
     \\
-    &=& A[R|t]
+    &=& A[R \mid t]
     \begin{bmatrix}
         X\\Y\\Z\\1
     \end{bmatrix}
 \end{matrix}$$
 - $X,Y,Z$ - 월드 좌표계 (world coordinate system) 상 3D 점의 좌표
-- $[R|t]$ - **extrinsic parameter** 월드좌표계를 카메라 좌표계로 변환하기 위한 회전 이동변환 행렬. 
+- $[R \mid t]$ - **extrinsic parameter** 월드좌표계를 카메라 좌표계로 변환하기 위한 회전 이동변환 행렬. 
   - 즉 카메라의 위치와 방향등 **카메라와 외부공간과의 기하학적 관계**에 대한 파라메터
 - $A$ - **intrinsic parameter** 카메라 내부의 기구적 요인에 대한 파라메터
   - 초점거리, aspect ratio, 중심점등 
 
-$A$ 와 $[R|t]$를 합쳐서 **camera matrix**라고 부름
+$A$ 와 $[R \mid t]$를 합쳐서 **camera matrix**라고 부름
 
 ![카메라 좌표계](/img/2023-07-31/camera_plane.png)
 
