fix: rename titles

--- a/_posts/2024-03-29-효율적인 c++ - 2.md
+++ b/_posts/2024-03-29-효율적인 c++ - 2.md
@@ -1,6 +1,6 @@
 
 ---
-title: 효율적인 c++ - #2 스마트 포인터 1
+title: 효율적인 c++ - 2.unique_ptr
 tags: c++
 ---
 # 스코프
@@ -190,3 +190,6 @@ cppCopy code
 - **`blockObject`**의 생존 기간은 블록의 실행 범위에 제한되어 있습니다.
 
 스코프가 객체의 메모리 관리와 어떻게 연관되는지 이해함으로써, 변수나 객체의 생존 기간을 효과적으로 관리하고 메모리 누수를 방지할 수 있습니다. C++에서는 객체의 생성자와 소멸자를 활용하여 객체의 생명주기를 제어하므로, 스코프에 따른 메모리 관리에 유의해야 합니다.
+
+
+작성중 
